// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BlockVerticalAlignmentUI > should match snapshot when controls are hidden 1`] = `
<div>
  <div
    class="components-dropdown components-dropdown-menu components-toolbar"
    tabindex="-1"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Align content vertically"
      class="components-button components-dropdown-menu__toggle has-icon"
      data-toolbar-item="true"
      type="button"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        height="24"
        stroke="currentColor"
        stroke-width="1.5"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="currentColor"
          height="13.75"
          stroke="none"
          width="7.5"
          x="8.25"
          y="8.25"
        />
        <path
          d="M2 3H22"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`BlockVerticalAlignmentUI > should match snapshot when controls are visible 1`] = `
<div>
  <div
    class="components-toolbar"
    icon="[object Object]"
    label="Align content vertically"
  >
    <div>
      <button
        aria-label="Align top"
        aria-pressed="true"
        class="components-button components-toolbar__control is-compact is-pressed has-icon"
        data-toolbar-item="true"
        type="button"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          stroke="currentColor"
          stroke-width="1.5"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="currentColor"
            height="13.75"
            stroke="none"
            width="7.5"
            x="8.25"
            y="8.25"
          />
          <path
            d="M2 3H22"
          />
        </svg>
      </button>
    </div>
    <div>
      <button
        aria-label="Align middle"
        aria-pressed="false"
        class="components-button components-toolbar__control is-compact has-icon"
        data-toolbar-item="true"
        type="button"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          stroke="currentColor"
          stroke-width="1.5"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 12H22"
          />
          <rect
            fill="currentColor"
            height="20"
            stroke="none"
            width="7.5"
            x="8.25"
            y="2"
          />
        </svg>
      </button>
    </div>
    <div>
      <button
        aria-label="Align bottom"
        aria-pressed="false"
        class="components-button components-toolbar__control is-compact has-icon"
        data-toolbar-item="true"
        type="button"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          stroke="currentColor"
          stroke-width="1.5"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 21H22"
          />
          <rect
            fill="currentColor"
            height="13.75"
            stroke="none"
            width="7.5"
            x="8.25"
            y="2"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
